# USTC-Parallel-Computing

./: .gitignore  README.md
Document/: lab1-2.pptx  lab3-4.pptx
PC_lab1/: CMakeLists.txt  PSRS.cpp  README.md  Report.md  pi.cpp  pi_1.cpp  pi_3.cpp  pi_4.cpp  pi_5.cpp  test.cpp
PC_lab1/PB20020480_王润泽_实验一/: pi_2.cpp
PC_lab2/: CMakeLists.txt  README.md  Report.md
PC_lab2/src/: PSRS.cpp  pi.cpp  sum_butterfly.cpp  sum_tree.cpp  test.cpp
PC_lab3/: CMakeLists.txt  README.md  Report.md
PC_lab3/src/: MatrixMulti.cu  VectorAdd.cu  kernel.cu
PC_lab4/: Report.md
PC_lab4/hadoop/: LenCount.java
PC_lab4/hadoop/output/: output_lencount
